F07.7 (2)— Media persistente y almacenamiento de objetos
